--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,43 @@
 * {
   box-sizing: border-box;
+  margin: 0;
 }
 
 .nav {
+  background-color: #f1a66a;
+  position: relative;
   display: flex;
+  height: 80px;
   justify-content: space-between;
 }
-.nav__button {
-  width: 15%;
-  height: auto;
-  border: none;
+.nav__div {
+  display: inline-block;
+  width: 80px;
+  padding-bottom: 20px;
+  position: relative;
 }
-.nav__button__icon {
+.nav__div__logo {
+  border-radius: 25%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 50%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.nav__div__button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 2%;
+}
+.nav__div__button .nav__button {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: transparent;
+}
+.nav__div__button .nav__button__icon {
   -o-object-fit: contain;
      object-fit: contain;
   height: 100%;
