--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 2%;
+  margin: 25px;
 }
 .nav__div__button .nav__button {
   width: 50px;
