--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,7 +29,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        margin: 2%;
+        margin: 25px;
         .nav__button {
             width: 50px;
             height: 50px;
