--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,45 +1,1 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-}
-.nav {
-    background-color: #f1a66a;
-    position: relative;
-    display: flex;
-    height: 80px;
-    justify-content: space-between;
-
-    &__div {
-        display: inline-block;
-        width: 80px;
-        padding-bottom: 20px;
-        position: relative;
-
-        &__logo {
-            border-radius: 25%;
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 50%;
-            object-fit: contain;
-        }
-    }
-
-    &__div__button{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        margin: 25px;
-        .nav__button {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            background-color: transparent;
-            &__icon {
-                object-fit: contain;
-                height: 100%;
-                width: 100%;
-            }
-        }
-    }
-}
+@import "nav";
