--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,11 @@ $textColor-dark: #cfcef6;
 $bgColor-light: #f1a66a;
 $bgColor-middle: #b9314f;
 $bgColor-dark: #151515;
+// Font style
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;500;600&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+$roboto-font: Roboto, sans-serif;
+$hind-font: Hind, sans-serif;
+
 // Default Style
 html, body {
     margin: 0;
@@ -15,3 +20,4 @@ html, body {
 // ALL CSS IMPORTS HERE
 @import "dinner";
 @import "nav";
+@import "title";
