ajout des boutons fonctionnel + js html de lucas pour les cards

--- a/style.scss
+++ b/style.scss
@@ -61,7 +61,7 @@
     border-radius: 50%;
   }
 
-  div.button_filter {
+  div.button__filter {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
