--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
-div.button_filter {
+div.button__filter {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
