maj et commentaires des fichiers

--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,7 @@
+
+
+// BUTTON STYLE ---------------------------------
+
 /* The switch - the box around the slider */
 .switch {
     position: relative;
@@ -66,3 +70,5 @@
     flex-direction: row;
     justify-content: space-between;
   }
+
+  // END BUTTON STYLE ---------------------------
