--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,11 +79,21 @@ html, body {
 .title__text__main {
   font-family: Roboto, sans-serif;
   margin-top: 80px;
-  font-size: 4.5rem;
+  font-size: 3.5rem;
+}
+@media screen and (min-width: 1000px) {
+  .title__text__main {
+    font-size: 4.5rem;
+  }
 }
 .title__text__subtitle {
   font-family: Hind, sans-serif;
-  font-size: 2.5rem;
+  font-size: 2rem;
+}
+@media screen and (min-width: 1000px) {
+  .title__text__subtitle {
+    font-size: 2.5rem;
+  }
 }
 .title__text__description {
   font-family: Hind, sans-serif;
