--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -2,6 +2,10 @@
     box-sizing: border-box;
     margin: 0;
 }
+header {
+    position: fixed;
+    width: 100%;
+}
 .nav {
     background-color: #f1a66a;
     position: relative;
@@ -22,6 +26,10 @@
             position: absolute;
             top: 50%;
             object-fit: contain;
+            transition: all 0.15s ease-out;
+            &:hover {
+                transform: scale(1.2);
+            }
         }
     }
 
