--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,11 +72,6 @@ html, body {
   margin: 0;
 }
 
-header {
-  position: fixed;
-  width: 100%;
-}
-
 .nav {
   background-color: #f1a66a;
   position: relative;
@@ -98,10 +93,6 @@ header {
   top: 50%;
   -o-object-fit: contain;
      object-fit: contain;
-  transition: all 0.15s ease-out;
-}
-.nav__div__logo:hover {
-  transform: scale(1.2);
 }
 .nav__div__button {
   display: flex;
@@ -121,3 +112,72 @@ header {
   height: 100%;
   width: 100%;
 }
+
+.button__filter {
+  margin-top: 100px;
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: red;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px red;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+div.button__filter {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}/*# sourceMappingURL=style.css.map */
