--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,11 @@ html, body {
   box-sizing: border-box;
 }
 
+header {
+  position: fixed;
+  width: 100%;
+}
+
 .nav {
   background-color: #f1a66a;
   position: relative;
@@ -93,6 +98,10 @@ html, body {
   top: 50%;
   -o-object-fit: contain;
      object-fit: contain;
+  transition: all 0.15s ease-in;
+}
+.nav__div__logo:hover {
+  transform: scale(1.2);
 }
 .nav__div__button {
   display: flex;
@@ -224,4 +233,4 @@ div.button__filter {
     margin: 80px;
     line-height: 1.3;
   }
-}/*# sourceMappingURL=style.css.map */
+}
