--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,10 +113,6 @@ html, body {
   width: 100%;
 }
 
-.button__filter {
-  margin-top: 100px;
-}
-
 /* The switch - the box around the slider */
 .switch {
   position: relative;
@@ -180,6 +176,10 @@ div.button__filter {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+p.button__title {
+  font-family: Roboto, sans-serif;
 }
 
 .title {
