--- a/assets/css/_dinner.scss
+++ b/assets/css/_dinner.scss
@@ -63,7 +63,15 @@ $dinner-minItemWidth: $dinner-maxItemWidth - 2 * $dinner-baseMargin;
             color: $textColor-dark;
         }
         &__shop {
-            margin-top: $dinner-baseMargin;
+            margin-top: calc($dinner-baseMargin / 2);
+            margin-bottom: calc($dinner-baseMargin / 2);
+            background-color: rgba($color: $bgColor-light, $alpha: 1.0);
+            border-radius: 5px;
+            border-color: rgb(234, 248, 108);
+            &__icon {
+                width: 16px;
+                height: 16px;
+            }
         }
     }
 }
