Reduct line-spacing in footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,7 +245,8 @@ p.button__title {
 }
 
 .footer-dark {
-  padding: 50px 0;
+  margin-top: 20px;
+  padding: 40px 0;
   color: #f0f9ff;
   background-color: #151515;
 }
@@ -297,7 +298,7 @@ p.button__title {
 }
 .footer-dark .item.text p {
   opacity: 0.6;
-  margin-bottom: 0;
+  margin: 5px;
   text-align: center;
 }
 
@@ -329,7 +330,7 @@ p.button__title {
 
 .footer-dark .copyright {
   text-align: center;
-  padding-top: 24px;
+  padding-top: 18px;
   opacity: 0.3;
   font-size: 13px;
   margin-bottom: 0;
