--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,10 +185,29 @@ div.button__filter {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  border: 1px solid blue;
+  background-color: #b9314f;
 }
 
 p.button__title {
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: center;
+  justify-content: center;
+}
+
+.button1 {
+  margin-left: 10px;
+  margin-bottom: 5px;
+}
+.button1:hover {
+  background-color: #f1a66a;
+  border-radius: 10%;
+}
+
+div.button5 {
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 .title {
@@ -233,4 +252,4 @@ p.button__title {
     margin: 80px;
     line-height: 1.3;
   }
-}
+}/*# sourceMappingURL=style.css.map */
