Added hover effect to nav button

--- a/assets/css/_buttonstyle.scss
+++ b/assets/css/_buttonstyle.scss
@@ -46,7 +46,7 @@
   }
   
   input:focus + .slider {
-    box-shadow: 0 0 1px $bgColor-lightred;
+    box-shadow: 0 0 1px $bgColor-middle;
   }
   
   input:checked + .slider:before {
