Space around filters

--- a/assets/css/_buttonstyle.scss
+++ b/assets/css/_buttonstyle.scss
@@ -67,7 +67,7 @@
   div.button__filter {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: $bgColor-middle;
   }
 
