--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,7 +198,7 @@ input:checked + .slider:before {
 div.button__filter {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   background-color: #b9314f;
 }
 
@@ -351,4 +351,4 @@ p.button__title {
   opacity: 0.3;
   font-size: 13px;
   margin-bottom: 0;
-}/*# sourceMappingURL=style.css.map */
+}
