Separate filters and menus with a margin

--- a/assets/css/_buttonstyle.scss
+++ b/assets/css/_buttonstyle.scss
@@ -55,6 +55,7 @@
     transform: rotate(45deg);
   }
   div.button__filter {
+    margin-bottom: 15px;
     padding-left: 15px;
     padding-right: 15px;
     width: 100%;
