--- a/assets/css/_buttonstyle.scss
+++ b/assets/css/_buttonstyle.scss
@@ -61,6 +61,7 @@
     width: 100%;
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
     align-items: center;
     align-content: center;
     gap: 0px 15px;
