Added shopping cart

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -36,4 +36,5 @@ html, body {
 @import "nav";
 @import "buttonstyle";
 @import "title";
-@import "footer"
+@import "footer";
+@import "shoppingcart";
