--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -8,7 +8,12 @@ header {
 }
 .nav {
     background-color: $bgColor-light;
-    background: radial-gradient(circle, $bgColor-light 0%, rgba(218,118,33,1) 58%, $bgColor-middle 100%);
+    background: radial-gradient(
+        circle,
+        $bgColor-light 0%,
+        rgba(218, 118, 33, 1) 58%,
+        $bgColor-middle 100%
+    );
     position: relative;
     display: flex;
     height: 50px;
@@ -34,7 +39,7 @@ header {
         }
     }
 
-    &__div__button{
+    &__div__button {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -50,8 +55,13 @@ header {
                 height: 100%;
                 width: 100%;
             }
-            &:hover{
-                background: radial-gradient(circle, $bgColor-light 0%, rgba(218,118,33,1) 58%, $bgColor-middle 100%);
+            &:hover {
+                background: radial-gradient(
+                    circle,
+                    $bgColor-light 0%,
+                    rgba(218, 118, 33, 1) 58%,
+                    $bgColor-middle 100%
+                );
             }
         }
     }
