--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,3 +352,49 @@ p.button__title {
   font-size: 13px;
   margin-bottom: 0;
 }
+
+.container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.shoppingcart {
+  margin-right: 20px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  background-color: #ffffff;
+  width: 300px;
+  height: 400px;
+}
+.shoppingcart__footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.shoppingcart__footer__content {
+  display: flex;
+}
+.shoppingcart__footer__content img {
+  height: 25px;
+}
+.shoppingcart__footer__content__total {
+  font-family: Hind, sans-serif;
+  margin: 0px 10px;
+}
+.shoppingcart__footer__checkout {
+  font-family: Hind, sans-serif;
+  background-color: #f5c299;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.25;
+  margin: 10px 60px;
+  padding: calc(0.875rem - 1px) calc(1.5rem - 1px);
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  cursor: pointer;
+}
