--- a/assets/css/_shoppingcart.scss
+++ b/assets/css/_shoppingcart.scss
@@ -1,10 +1,9 @@
 .container {
-    display: flex;
-    justify-content: flex-end;
+    position: absolute;
+    right: 10px;
 }
 
 .shoppingcart {
-    margin-right: 20px;
     margin-top: 20px;
     display: flex;
     flex-direction: column;
@@ -18,6 +17,12 @@
         align-items: center;
         justify-content: center;
         flex-wrap: wrap;
+
+        &__divider {
+            width: 280px;
+            margin: 10px 0px;
+            border-bottom: 1px solid gray;
+        }
 
         &__content {
             display: flex;
@@ -43,6 +48,10 @@
             border-radius: 0.25rem;
             box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
             cursor: pointer;
+
+            :hover{
+                background-color: $bgColor-middlelight;
+            }
         }
     }
 }
