--- a/assets/css/_shoppingcart.scss
+++ b/assets/css/_shoppingcart.scss
@@ -4,14 +4,17 @@
 }
 
 .shoppingcart {
-    margin-top: 20px;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
+    color: #5b5b5b;
     background-color: #ffffff;
+    font-family: $hind-font;
     width: 300px;
     height: 400px;
+    margin-top: 20px;
     &__footer {
         display: flex;
         align-items: center;
@@ -31,7 +34,7 @@
             }
 
             &__total {
-                font-family: $hind-font;
+                
                 margin: 0px 10px;
             }
         }
