--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,6 +407,14 @@ div.button__filter {
   background-color: #be793f;
 }
 
+.shoppingcart__item {
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 30px;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+}
 .shoppingcart__item__item {
   display: flex;
   flex-flow: row wrap;
@@ -419,11 +427,26 @@ div.button__filter {
 }
 .shoppingcart__item__item__name {
   width: 100%;
+  padding-left: 30px;
   font-weight: bold;
 }
 .shoppingcart__item__item__quantity span {
+  padding-left: 30px;
   font-style: italic;
 }
 .shoppingcart__item__item__price span {
   font-style: italic;
+}
+.shoppingcart__item__item__btns__add, .shoppingcart__item__item__btns__remove {
+  width: 20px;
+  height: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 10px;
+  border: solid 1px #5b5b5b;
+  border-radius: 50%;
+}
+.shoppingcart__item__item__btns__add:hover, .shoppingcart__item__item__btns__remove:hover {
+  border: solid 1px #919191;
+  background-color: #ffffff;
 }
