--- a/assets/css/_shoppingcart.scss
+++ b/assets/css/_shoppingcart.scss
@@ -3,6 +3,7 @@
     right: 10px;
     display: none;
     animation: slide 1s ease 3.5s forwards;
+    z-index: 2;
 }
 
 .shoppingcart {
@@ -11,8 +12,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    color: #5b5b5b;
-    background-color: #ffffff;
+    color: $textColor-dark;
+    background-color: $bgColor-dark;
     font-family: $hind-font;
     width: 300px;
     height: 400px;
@@ -33,6 +34,10 @@
             display: flex;
             img {
                 height: 25px;
+                padding-left: 5px;
+                padding-right: 5px;
+                background-color: $bgColor-light;
+                border-radius: 5px;
             }
 
             &__total {
@@ -54,7 +59,7 @@
             box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
             cursor: pointer;
 
-            :hover{
+            &:hover {
                 background-color: $bgColor-middlelight;
             }
         }
