--- a/assets/css/style-dark-theme.css
+++ b/assets/css/style-dark-theme.css
@@ -6,6 +6,188 @@ html, body {
   color: #f4f4f4;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+header {
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+}
+
+.nav {
+  background-color: #f1a66a;
+  background: radial-gradient(circle, #f1a66a 0%, rgb(218, 118, 33) 58%, #b9314f 100%);
+  position: relative;
+  display: flex;
+  height: 50px;
+  justify-content: space-between;
+}
+.nav__div {
+  display: inline-block;
+  width: 50px;
+  padding-bottom: 20px;
+  position: relative;
+}
+.nav__div__logo {
+  border-radius: 25%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 50%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  transition: all 0.15s ease-in;
+}
+.nav__div__logo:hover {
+  transform: scale(1.2);
+}
+.nav__div__button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 25px;
+}
+.nav__div__button .nav__button {
+  width: 40px;
+  height: 40px;
+  border-radius: 15%;
+  background-color: transparent;
+}
+.nav__div__button .nav__button__icon {
+  padding: 2px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  height: 100%;
+  width: 100%;
+}
+.nav__div__button .nav__button:hover {
+  background: radial-gradient(circle, #f1a66a 0%, rgb(218, 118, 33) 58%, #b9314f 100%);
+}
+
+.title {
+  background-image: url("assets/img/title_background.jpg");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.title__text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+.title__text__main {
+  font-family: Roboto, sans-serif;
+  margin-top: 140px;
+  font-size: 3.5rem;
+}
+@media screen and (min-width: 1000px) {
+  .title__text__main {
+    font-size: 4.5rem;
+  }
+}
+.title__text__subtitle {
+  font-family: Hind, sans-serif;
+  font-size: 2rem;
+}
+@media screen and (min-width: 1000px) {
+  .title__text__subtitle {
+    font-size: 2.5rem;
+  }
+}
+.title__text__description {
+  font-family: Hind, sans-serif;
+  font-size: 1.2rem;
+  margin: 30px;
+  line-height: 1.2;
+}
+@media screen and (min-width: 1000px) {
+  .title__text__description {
+    margin: 80px;
+    line-height: 1.3;
+  }
+}
+
+.button1 {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 0px 5px;
+}
+.button1:hover {
+  background-color: #f1a66a;
+  border-radius: 10%;
+}
+
+/* The switch - the box around the circle */
+.switch {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 15px;
+  width: 15px;
+}
+.switch input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 15px;
+  width: 15px;
+  background-color: #151515;
+  border-radius: 15px;
+}
+
+.slider:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.switch input:checked ~ .slider:after {
+  display: block;
+}
+
+.switch .slider:after {
+  left: 5px;
+  top: 0px;
+  width: 5px;
+  height: 10px;
+  border: solid #cfcef6;
+  border-width: 0 3px 3px 0;
+  transform: rotate(45deg);
+}
+
+div.button__filter {
+  margin-bottom: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  gap: 0px 15px;
+  background-color: #f1a66a;
+}
+
+.button_title {
+  padding-left: 10px;
+  font-family: Roboto, sans-serif;
+}
+
 #dinner {
   display: flex;
   flex-flow: row wrap;
@@ -76,195 +258,10 @@ html, body {
   height: 16px;
 }
 
-* {
-  box-sizing: border-box;
-}
-
-header {
-  position: fixed;
-  width: 100%;
-  z-index: 1;
-}
-
-.nav {
-  background-color: #f1a66a;
-  background: radial-gradient(circle, #f1a66a 0%, rgb(218, 118, 33) 58%, #b9314f 100%);
-  position: relative;
-  display: flex;
-  height: 50px;
-  justify-content: space-between;
-}
-.nav__div {
-  display: inline-block;
-  width: 50px;
-  padding-bottom: 20px;
-  position: relative;
-}
-.nav__div__logo {
-  border-radius: 25%;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 50%;
-  -o-object-fit: contain;
-     object-fit: contain;
-  transition: all 0.15s ease-in;
-}
-.nav__div__logo:hover {
-  transform: scale(1.2);
-}
-.nav__div__button {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 25px;
-}
-.nav__div__button .nav__button {
-  width: 40px;
-  height: 40px;
-  border-radius: 15%;
-  background-color: transparent;
-}
-.nav__div__button .nav__button__icon {
-  padding: 2px;
-  -o-object-fit: contain;
-     object-fit: contain;
-  height: 100%;
-  width: 100%;
-}
-.nav__div__button .nav__button:hover {
-  background: radial-gradient(circle, #f1a66a 0%, rgb(218, 118, 33) 58%, #b9314f 100%);
-}
-
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  transition: 0.4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  transition: 0.4s;
-}
-
-input:checked + .slider {
-  background-color: #f1a66a;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #b9314f;
-}
-
-input:checked + .slider:before {
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
-div.button__filter {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  background-color: #b9314f;
-}
-
-p.button__title {
-  font-family: Roboto, sans-serif;
-  display: flex;
-  flex-direction: center;
-  justify-content: center;
-}
-
-.button1 {
-  margin: 0px 0px 10px 10px;
-}
-.button1:hover {
-  background-color: #f1a66a;
-  border-radius: 10%;
-}
-
-.title {
-  background-image: url("assets/img/title_background.jpg");
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.title__text {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.title__text__main {
-  font-family: Roboto, sans-serif;
-  margin-top: 140px;
-  font-size: 3.5rem;
-}
-@media screen and (min-width: 1000px) {
-  .title__text__main {
-    font-size: 4.5rem;
-  }
-}
-.title__text__subtitle {
-  font-family: Hind, sans-serif;
-  font-size: 2rem;
-}
-@media screen and (min-width: 1000px) {
-  .title__text__subtitle {
-    font-size: 2.5rem;
-  }
-}
-.title__text__description {
-  font-family: Hind, sans-serif;
-  font-size: 1.2rem;
-  margin: 30px;
-  line-height: 1.2;
-}
-@media screen and (min-width: 1000px) {
-  .title__text__description {
-    margin: 80px;
-    line-height: 1.3;
-  }
-}
-
 .footer-dark {
   margin-top: 20px;
   padding: 40px 0;
-  color: #f0f9ff;
+  color: #f4f4f4;
   background-color: #151515;
 }
 
@@ -295,7 +292,7 @@ p.button__title {
 }
 
 .footer-dark .item.text p a {
-  color: #f0f9ff;
+  color: #f4f4f4;
 }
 
 @media (max-width: 767px) {
@@ -337,7 +334,7 @@ p.button__title {
   display: inline-block;
   text-align: center;
   margin: 0 8px;
-  color: #fff;
+  color: #f4f4f4;
   opacity: 0.75;
 }
 
@@ -351,4 +348,112 @@ p.button__title {
   opacity: 0.3;
   font-size: 13px;
   margin-bottom: 0;
+}
+
+.container {
+  position: absolute;
+  right: 10px;
+  display: none;
+  -webkit-animation: slide 1s ease 3.5s forwards;
+          animation: slide 1s ease 3.5s forwards;
+  z-index: 2;
+}
+
+.shoppingcart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  color: #cfcef6;
+  background-color: #151515;
+  font-family: Hind, sans-serif;
+  width: 300px;
+  height: 400px;
+  margin-top: 20px;
+}
+.shoppingcart__footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.shoppingcart__footer__divider {
+  width: 280px;
+  margin: 10px 0px;
+  border-bottom: 1px solid gray;
+}
+.shoppingcart__footer__content {
+  display: flex;
+}
+.shoppingcart__footer__content img {
+  height: 25px;
+  padding-left: 5px;
+  padding-right: 5px;
+  background-color: #f1a66a;
+  border-radius: 5px;
+}
+.shoppingcart__footer__content__total {
+  margin: 0px 10px;
+}
+.shoppingcart__footer__checkout {
+  font-family: Hind, sans-serif;
+  background-color: #f1a66a;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.25;
+  margin: 10px 60px;
+  padding: calc(0.875rem - 1px) calc(1.5rem - 1px);
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  cursor: pointer;
+}
+.shoppingcart__footer__checkout:hover {
+  background-color: #be793f;
+}
+
+.shoppingcart__item {
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 30px;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+}
+.shoppingcart__item__item {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: flex-end;
+  gap: 0px 3px;
+}
+.shoppingcart__item__item p {
+  margin: 0;
+}
+.shoppingcart__item__item__name {
+  width: 100%;
+  padding-left: 30px;
+  font-weight: bold;
+}
+.shoppingcart__item__item__quantity span {
+  padding-left: 30px;
+}
+.shoppingcart__item__item__quantity, .shoppingcart__item__item__price {
+  color: #f4f4f4;
+}
+.shoppingcart__item__item__quantity span, .shoppingcart__item__item__price span {
+  font-style: italic;
+}
+.shoppingcart__item__item__btns__add, .shoppingcart__item__item__btns__remove {
+  width: 20px;
+  height: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 10px;
+  border: solid 1px #5b5b5b;
+  border-radius: 50%;
+}
+.shoppingcart__item__item__btns__add:hover, .shoppingcart__item__item__btns__remove:hover {
+  border: solid 1px #919191;
+  background-color: #151515;
 }
