--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,5 @@
 // Dark Theme
-$light-theme: false !default;
+$light-theme: true !default;
 // Text Color
 $textColor-light: #f4f4f4;
 $textColor-dark: #cfcef6;
@@ -10,12 +10,9 @@ $bgColor-middle: #b9314f;
 $bgColor-dark: #151515;
 
 @if $light-theme {
-    $textColor-light: darken($textColor-light, 60%);
-    $textColor-dark: darken($textColor-dark, 60%);
-    $bgColor-light: lighten($bgColor-light, 10%);
-    $bgColor-middlelight: lighten($bgColor-middlelight, 20%);
-    $bgColor-middle: lighten($bgColor-middle, 30%);
-    $bgColor-dark: lighten($textColor-dark, 40%);
+    $textColor-light: #151515;
+    $bgColor-dark: #f4f4f4;
+    $textColor-dark: #292929;
 }
 
 // Font style
