--- a/assets/css/style-light-theme.scss
+++ b/assets/css/style-light-theme.scss
@@ -1,35 +1,8 @@
+@import "colordef";
 // Text Color
 $textColor-light: #f4f4f4;
 $textColor-dark: #cfcef6;
 // Background Color
-$bgColor-light: #f1a66a;
-$bgColor-middlelight: #be793f;
-$bgColor-middle: #b9314f;
 $bgColor-dark: #151515;
 
-@if $light-theme {
-    $textColor-light: #151515;
-    $bgColor-dark: #f4f4f4;
-    $textColor-dark: #292929;
-}
-
-// Font style
-@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;500;600&family=Roboto:wght@100;300;400;500;700;900&display=swap');
-$roboto-font: Roboto, sans-serif;
-$hind-font: Hind, sans-serif;
-
-// Default Style
-html, body {
-    margin: 0;
-    padding: 0;
-    background-color: $bgColor-dark;
-    color: $textColor-light;
-}
-// ALL CSS IMPORTS HERE
-@import "nav";
-@import "title";
-@import "buttonstyle";
-@import "dinner";
-@import "footer";
-@import "shoppingcart";
-@import "shoppingitems";
+@import "style";
