--- a/assets/css/_shoppingcart.scss
+++ b/assets/css/_shoppingcart.scss
@@ -7,7 +7,7 @@
 }
 
 .shoppingcart {
-    
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,6 +18,20 @@
     width: 300px;
     height: 400px;
     margin-top: 20px;
+    &:before {
+        // layout
+        content: '';
+        position: absolute;
+        width: 0;
+        height: 0;
+        bottom: 100%;
+        right: 1.5em; // offset should move with padding of parent
+        border: .75rem solid transparent;
+        border-top: none;
+    
+        // looks
+        border-bottom-color: $bgColor-dark;
+    }
     &__footer {
         display: flex;
         align-items: center;
