--- a/assets/css/style-dark-theme.css
+++ b/assets/css/style-dark-theme.css
@@ -360,6 +360,7 @@ div.button__filter {
 }
 
 .shoppingcart {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -370,6 +371,17 @@ div.button__filter {
   width: 300px;
   height: 400px;
   margin-top: 20px;
+}
+.shoppingcart:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  bottom: 100%;
+  right: 1.5em;
+  border: 0.75rem solid transparent;
+  border-top: none;
+  border-bottom-color: #f4f4f4;
 }
 .shoppingcart__footer {
   display: flex;
